# WebChimera.js

./: .gitignore  .gitmodules  CMakeLists.txt  build_electron.cmd  build_electron.sh  build_node.cmd  build_node.sh  package-lock.json  package.json  rebuild.js  test.bat
src/: JsVlcAudio.cpp  JsVlcDeinterlace.cpp  JsVlcInput.cpp  JsVlcInput.h  JsVlcMedia.cpp  JsVlcPlayer.cpp  JsVlcPlayer.h  JsVlcPlaylist.cpp  JsVlcPlaylistItems.cpp  JsVlcSubtitles.cpp  JsVlcVideo.cpp  NodeTools.cpp  NodeTools.h  VlcVideoOutput.cpp  VlcVideoOutput.h  WebChimera.cpp
test/: test.js
